syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "google/protobuf/any.proto";
import "Enumerations.proto";

message GetAutoMlSolutionsForConfigurationRequest {
    string task = 1;
    map<string, string> configuration = 2;
  }
  
message GetAutoMlSolutionsForConfigurationResponse {
    repeated string AutoMlSolutions = 1;
  }

message GetTasksForDatasetTypeRequest {
    string datasetType = 1;
  }
  
message GetTasksForDatasetTypeResponse {
    repeated string tasks = 1;
  }
  
message GetMlLibrariesForTaskRequest {
    string task = 1;
  }
  
message GetMlLibrariesForTaskResponse {
    repeated string MlLibraries = 1;
  }

message GetAvailableStrategiesRequest {
    string userIdentifier = 1;
    string datasetIdentifier = 2;
    map<string, string> configuration = 3;
  }
  
message GetAvailableStrategiesResponse {
    repeated Strategy Strategies = 1;
  }

message Strategy {
    string identifier = 1;
    string title = 2;
    string description = 3;
  }
  

message GetObjectsInformationRequest {
  repeated string identifiers = 1; //RDF object IRI. example: [":tabular_classification",”:autokeras”]
}

message GetObjectsInformationResponse {
  repeated ObjectInformation objectInformations = 1;
}


message GetDatasetTypesRequest {
}

message GetDatasetTypesResponse {
  repeated string datasetTypes = 1;
}

message ObjectInformation {
  /*
    RDF subject IRI
    example: “:tabular_classification"
  */
  string identifier = 1;

  /*
    dictionary of RDF pairs for predicates and objects
    example:
    {
      "skos:prefLabel": "tabular classification",
      "skos:broader": ":classification",
      ":belongs_to": ":supervised_learning",
      ":has_dataset_type": ":tabular"
    }
  */
  map<string, string> informations = 2;
}