syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "Enumerations.proto";
import "ModelRelatedMessages.proto";

message DeleteTrainingRequest {
  string userId = 1;
  string trainingId = 2;
}

message DeleteTrainingResponse {
  
}

message GetTrainingsRequest {
    string userId = 1;
  }
  
message GetTrainingsResponse {
    repeated Training trainings = 1;
  }
  
message GetTrainingRequest {
    string userId = 1;
    string trainingId = 2;
  }
  
message GetTrainingResponse {
  Training training = 1;
}

message Training {
    string id = 1;
    repeated Model models = 2;
    string datasetId = 3;
    string datasetName = 4;
    string task = 5;
    string configuration = 6;
    repeated string selectedMlLibraries = 7;
    repeated string selectedAutoMls = 8;
    string runtimeConstraints = 9;
    string datasetConfiguration = 10;
    string testConfiguration = 11;
    string status = 12;
    google.protobuf.Timestamp startTime = 13;
    google.protobuf.Timestamp endTime = 14;
    repeated StrategyControllerEvent events = 15;
  }
 

message StrategyControllerEvent {
    string type = 1;
    string meta = 2;
    google.protobuf.Timestamp timestamp = 3;
  }
  

message CreateTrainingRequest {
  string userId = 1;
  string datasetId = 2;
  string task = 3;
  string configuration = 4;
  repeated string selectedAutoMls = 5;
  string runtimeConstraints = 6;
  string datasetConfiguration = 7;
  string testConfiguration = 8;
  string metric = 9;
  repeated string selectedLibraries = 10;
}


message CreateTrainingResponse {
  string trainingId = 1;
}